--- a/Assets/Sites/family tree/html/Index.html
+++ b/Assets/Sites/family tree/html/Index.html
@@ -2,7 +2,7 @@
 
 <ul>
   <li>Me (Arvind Khoja)</li> 
-  <img src="../alive img/me.jpg" width="400" />
+  <img src="../Alive img/me.jpg" width="400"/>
   
   <li>Anisha{Younger Sister}</li>
   <img src="../Alive img/anisha.jpg" width="400"/>
